--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -3,7 +3,7 @@
 }
 
 .Tilt {
-    height: 150px;
-    width: 150px;
-    background: linear-gradient(89deg, #ff5edf 0%, #04c8de 100%);
+    height: 100px;
+    width: 100px;
+    background: linear-gradient(89deg, #7d7de9 0%, #60e2f0 100%);
 }
